- 2016/10/11

 * Package Update due changes in BgeeDB

 * Correction on description of "database" arguments due to update on PsyGeNET


- 2016/09/02

 * Package Update due to future update of PsyGeNET

 * Removed functions for Venn Diagrams


