@@ -1,7 +1,7 @@
 Package: psygenet2r
 Title: psygenet2r - An R package for querying PsyGeNET and to perform
         comorbidity studies in psychiatric disorders
-Version: 1.7.0
+Version: 1.6.1
 Authors@R: c(person("Alba", "Gutierrez-Sacristan", "alba.gutierrez@upf.edu", role = c("aut", "cre")),
   person("Carles", "Hernandez-Ferrer", "carles.hernandez@isglobal.org", role = "aut"))
 Description: Package to retrieve data from PsyGeNET database (www.psygenet.org) and to perform comorbidity studies with PsyGeNET's and user's data.
@@ -10,7 +10,8 @@ License: MIT + file LICENSE
 LazyData: true
 Suggests: testthat
 Imports: stringr, RCurl, igraph, ggplot2, reshape2, grid, parallel,
-        biomaRt, BgeeDB, topGO
+        biomaRt, BgeeDB, topGO,
+    BiocInstaller
 NeedsCompilation: no
 Packaged: 2016-09-08 06:06:04 UTC; biocbuild
 Author: Alba Gutierrez-Sacristan [aut],
