@@ -14,8 +14,8 @@ diseaseNameMapping <- function( input , type = "short" ){
             table$c2.PsychiatricDisorder <- gsub( "Schizophrenia spectrum and other psychotic disorders", "Schizophrenia", table$c2.PsychiatricDisorder)
             table$c2.PsychiatricDisorder <- gsub( "Cocaine use disorders", "Cocaine UD", table$c2.PsychiatricDisorder)
             table$c2.PsychiatricDisorder <- gsub( "Cannabis use disorders", "Cannabis UD", table$c2.PsychiatricDisorder)
-            table$c2.PsychiatricDisorder <- gsub( "Substance Induced-Psychosis", "DI-Psychosis", table$c2.PsychiatricDisorder)
-            table$c2.PsychiatricDisorder <- gsub( "Substance-induced depressive disorder", "SI-Depression", table$c2.PsychiatricDisorder)
+            table$c2.PsychiatricDisorder <- gsub( "Substance induced psychosis", "SI-Psychosis", table$c2.PsychiatricDisorder)
+            table$c2.PsychiatricDisorder <- gsub( "Substance induced depressive disorder", "SI-Depression", table$c2.PsychiatricDisorder)
 
             }else 
                 if ( type == "acronym" ){
@@ -25,8 +25,8 @@ diseaseNameMapping <- function( input , type = "short" ){
                 table$c2.PsychiatricDisorder <- gsub( "Schizophrenia spectrum and other psychotic disorders", "SCHZ", table$c2.PsychiatricDisorder)
                 table$c2.PsychiatricDisorder <- gsub( "Cocaine use disorders", "CUD", table$c2.PsychiatricDisorder)
                 table$c2.PsychiatricDisorder <- gsub( "Cannabis use disorders", "CanUD", table$c2.PsychiatricDisorder)
-                table$c2.PsychiatricDisorder <- gsub( "Substance Induced-Psychosis", "D-PSY", table$c2.PsychiatricDisorder)
-                table$c2.PsychiatricDisorder <- gsub( "Substance-induced depressive disorder", "SI-DEP", table$c2.PsychiatricDisorder)
+                table$c2.PsychiatricDisorder <- gsub( "Substance induced psychosis", "SI-PSY", table$c2.PsychiatricDisorder)
+                table$c2.PsychiatricDisorder <- gsub( "Substance induced depressive disorder", "SI-DEP", table$c2.PsychiatricDisorder)
                 }
     }else 
         
@@ -37,8 +37,8 @@ diseaseNameMapping <- function( input , type = "short" ){
             names( table ) <- gsub( "Schizophrenia spectrum and other psychotic disorders", "Schizophrenia", names( table ) )
             names( table ) <- gsub( "Cocaine use disorders", "Cocaine UD", names( table ) )
             names( table ) <- gsub( "Cannabis use disorders", "Cannabis UD", names( table ) )
-            names( table ) <- gsub( "Substance Induced-Psychosis", "DI-Psychosis", names( table ) )
-            names( table ) <- gsub( "Substance-induced depressive disorder", "SI-Depression", names( table ) )
+            names( table ) <- gsub( "Substance induced psychosis", "SI-Psychosis", names( table ) )
+            names( table ) <- gsub( "Substance induced depressive disorder", "SI-Depression", names( table ) )
     }
     
     
