@@ -1,3 +1,8 @@
+- 2016/10/28
+
+ * Update of topAnatEnrichment due to Biocondcutors Update
+
+
 - 2016/10/11
 
  * Package Update due changes in BgeeDB
